--- a/Serverless_Webite_Demo/index.html
+++ b/Serverless_Webite_Demo/index.html
@@ -8,7 +8,7 @@
 					document.getElementById("my-demo").innerHTML = this.responseText;
 					}
 				};
-				xhttp.open("GET", "MY_API_GATEWAY_ENDPOINT_URL", true);
+				xhttp.open("GET", " https://9y2hpk44v4.execute-api.us-east-1.amazonaws.com/default/mylambdafunction-1", true);
 				xhttp.send();
 
 			}
